--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/shine00chang/hearts#readme",
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "socket.io": "^4.8.3"
   }
 }
