--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dbtest": "node src/dbtest.js"
+    "dbtest": "node src/db/dbtest.js"
   },
   "repository": {
     "type": "git",
