--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,8 @@
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"daisyui": "^5.5.18"
 	}
 }
