auth skeleton and more db funcs

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/shine00chang/hearts#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
